[NAE-2027] Netgrif modules
- refactore plugin to modular